<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.7</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>me.christyjohn</groupId>
	<artifactId>spring-pet-clinic</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>spring-pet-clinic</name>
	<description>Pet Clinic implementation using Spring 5</description>


	<modules>
		<module>pet-clinic-data</module>
		<module>pet-clinic-web</module>
	</modules>

	<properties>
		<java.version>11</java.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<goals>install</goals>
						<checkModificationExcludes>
							<checkModificationExclude>pom.xml</checkModificationExclude>
						</checkModificationExcludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<scm>
		<developerConnection>scm:git:https://github.com/christyjohn/spring-pet-clinic.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
</project>
